test/nl/formats/liberty/benchmarks/errors/inconsistent_bundle_parent_direction_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      direction : input;
      members (D0);
      pin (D0) {
        direction : output;
      }
    }
  }
}
